--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
 		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.8.3",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.7",
+		"svelte": "^4.2.19",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.4.11"
 	},
-	"type": "module",
-	"dependencies": {
-		"jszip": "^3.10.1"
-	}
+	"type": "module"
 }
