--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-	"name": "bookshelf-manager",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.2",
-		"@sveltejs/kit": "^2.8.3",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.6.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.4.11"
-	},
-	"type": "module"
+  "name": "bookshelf-manager",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "4.0.0",
+    "@sveltejs/adapter-static": "3.0.8",
+    "@sveltejs/kit": "2.16.1",
+    "@sveltejs/vite-plugin-svelte": "5.0.3",
+    "svelte-check": "4.1.4",
+    "svelte": "5.19.6",
+    "tslib": "2.8.1",
+    "typescript": "5.7.3",
+    "vite": "6.0.11"
+  },
+  "type": "module"
 }
